--- a/public/css/utils/error.css
+++ b/public/css/utils/error.css
@@ -19,3 +19,11 @@
     margin: 0.5rem 0;
     text-align: center;
 }
+
+.error-text {
+  display: none;
+}
+
+.error-text.visible {
+  display: block;
+}
