--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -37,10 +37,10 @@
                 <div class="input-wrapper">
                     <i class="fa-solid fa-user field-icon"></i>
                     <input type="text" name="username" value="<%= username || '' %>" 
-                           placeholder="ejemplo" class="<%= validationErrors?.username ? 'input-error' : '' %>">
+                    data-error-input placeholder="ejemplo" class="<%= validationErrors?.username ? 'input-error' : '' %>">
                 </div>
                 <% if (validationErrors?.username) { %>
-                    <p class="field-error">
+                   <p class="error-text field-error visible" data-error-for="username">
                         <i class="fa-solid fa-circle-exclamation"></i>
                         <%= validationErrors.username %>
                     </p>
@@ -51,15 +51,15 @@
                 <label for="password">Contraseña</label>
                 <div class="input-wrapper">
                     <i class="fa-solid fa-lock field-icon"></i>
-                    <input type="password" name="password" id="passwordInput" placeholder="Introducir contraseña" 
-                           class="password-input <%= validationErrors?.password ? 'input-error' : '' %>">
+                    <input type="password" name="password" id="passwordInput" placeholder="Introduce la contraseña" 
+                    data-error-input class="password-input <%= validationErrors?.password ? 'input-error' : '' %>">
                     
                     <span onclick="togglePassword('password')" class="toggle-password">
                       <i id="eyeIconPassword" class="fas fa-eye-slash"></i>
                     </span>
                 </div>
                 <% if (validationErrors?.password) { %>
-                    <p class="field-error">
+                    <p class="error-text field-error visible" data-error-for="password">
                         <i class="fa-solid fa-circle-exclamation"></i>
                         <%= validationErrors.password %>
                     </p>
@@ -79,5 +79,6 @@
 </body>
 
 <script src="/js/utils/showPass.js"></script>
+<script src="/js/utils/cleanFormError.js"> </script>
 
 </html>
