--- a/src/views/admin/variants.ejs
+++ b/src/views/admin/variants.ejs
@@ -59,11 +59,10 @@
         <input type="hidden" id="variantId">
         <div class="form-group">
           <label for="productoInput">Producto:</label>
-          <input type="text" id="productoInput" name="producto_nombre" autocomplete="off">
+          <input type="text" id="productoInput" name="producto_id" autocomplete="off">
           <div id="sugerenciasProducto" class="suggestions-list"></div>
           <div class="error-text" data-error-for="producto_id"></div>
         </div>
-
         <div class="form-group">
           <label for="variantColor">Color:</label>
           <input type="text" id="variantColor" name="color">
