Cambios de estilos

--- a/src/views/admin/device.ejs
+++ b/src/views/admin/device.ejs
@@ -35,11 +35,11 @@
                 <table class="product-table">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Nombre</th>
-                            <th>RAM</th>
-                            <th>Almacenamiento</th>
-                            <th>Acciones</th>
+                            <th style="width: 20%;">ID</th>
+                            <th style="width: 25%;">Nombre</th>
+                            <th style="width: 25%;">RAM</th>
+                            <th style="width: 25%;">Almacenamiento</th>
+                            <th style="width: 5%;">Acciones</th>
                         </tr>
                     </thead>
                     <tbody id="devicesTableBody">
