--- a/src/views/admin/specs.ejs
+++ b/src/views/admin/specs.ejs
@@ -56,7 +56,7 @@
                                 <th>Tipo</th>
                                 <th>Frecuencia</th>
                                 <th>Protección</th>
-                                <th>Acciones</th>
+                                <th style="width: 5%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="pantallasTableBody">
@@ -84,11 +84,11 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Principal</th>
-                                <th>Frontal</th>
-                                <th>Video</th>
-                                <th>Acciones</th>
+                                <th style="width: 20%;">ID</th>
+                                <th style="width: 25%;">Principal</th>
+                                <th style="width: 25%;">Frontal</th>
+                                <th style="width: 25%;">Video</th>
+                                <th style="width: 5%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="camarasTableBody">
@@ -117,11 +117,11 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Nombre</th>
-                                <th>Núcleos</th>
-                                <th>Velocidad</th>
-                                <th>Acciones</th>
+                                <th style="width: 20%;">ID</th>
+                                <th style="width: 25%;">Nombre</th>
+                                <th style="width: 25%;">Núcleos</th>
+                                <th style="width: 25%;">Velocidad</th>
+                                <th style="width: 5%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="cpusTableBody">
@@ -149,10 +149,10 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Modelo</th>
-                                <th>Núcleos</th>
-                                <th>Acciones</th>
+                                <th style="width: 30%;">ID</th>
+                                <th style="width: 30%;">Modelo</th>
+                                <th style="width: 30%;">Núcleos</th>
+                                <th style="width: 10%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="gpusTableBody">
@@ -180,12 +180,12 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Capacidad</th>
-                                <th>Tipo</th>
-                                <th>Carga Rápida</th>
-                                <th>Inalámbrica</th>
-                                <th>Acciones</th>
+                                <th style="width: 20%;">ID</th>
+                                <th style="width: 20%;">Capacidad</th>
+                                <th style="width: 20%;">Tipo</th>
+                                <th style="width: 20%;">Carga Rápida</th>
+                                <th style="width: 15%;">Inalámbrica</th>
+                                <th style="width: 5%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="bateriasTableBody">
@@ -213,12 +213,12 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Red</th>
-                                <th>Wi-Fi</th>
-                                <th>Bluetooth</th>
-                                <th>NFC</th>
-                                <th>Acciones</th>
+                                <th style="width: 20%;">ID</th>
+                                <th style="width: 20%;">Red</th>
+                                <th style="width: 20%;">Wi-Fi</th>
+                                <th style="width: 20%;">Bluetooth</th>
+                                <th style="width: 15%;">NFC</th>
+                                <th style="width: 5%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="conectividadTableBody">
@@ -246,12 +246,12 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Altura</th>
-                                <th>Anchura</th>
-                                <th>Grosor</th>
-                                <th>Peso</th>
-                                <th>Acciones</th>
+                                <th style="width: 20%;">ID</th>
+                                <th style="width: 20%;">Altura</th>
+                                <th style="width: 20%;">Anchura</th>
+                                <th style="width: 20%;">Grosor</th>
+                                <th style="width: 15%;">Peso</th>
+                                <th style="width: 5%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="dimensionesTableBody">
@@ -279,10 +279,10 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Capacidad</th>
-                                <th>Tipo</th>
-                                <th>Acciones</th>
+                                <th style="width: 30%;">ID</th>
+                                <th style="width: 30%;">Capacidad</th>
+                                <th style="width: 30%;">Tipo</th>
+                                <th style="width: 10%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="almacenamientoTableBody">
@@ -310,10 +310,10 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Capacidad</th>
-                                <th>Tipo</th>
-                                <th>Acciones</th>
+                                <th style="width: 30%;">ID</th>
+                                <th style="width: 30%;">Capacidad</th>
+                                <th style="width: 30%;">Tipo</th>
+                                <th style="width: 10%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="ramTableBody">
@@ -341,9 +341,9 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>Móvil ID</th>
-                                <th>Almacenamiento ID</th>
-                                <th>Acciones</th>
+                                <th style="width: 45%;">Móvil ID</th>
+                                <th style="width: 45%;">Almacenamiento ID</th>
+                                <th style="width: 10%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="variantesAlmTableBody">
@@ -371,9 +371,9 @@
                     <table class="product-table">
                         <thead>
                             <tr>
-                                <th>Móvil ID</th>
-                                <th>RAM ID</th>
-                                <th>Acciones</th>
+                                <th style="width: 45%;">Móvil ID</th>
+                                <th style="width: 45%;">RAM ID</th>
+                                <th style="width: 10%;">Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="variantesRAMTableBody">
